lib/tests/snapshots/tree__add_left.snap
---
source: lib/tests/tree.rs
expression: tree
---
BTree {
    nodes: [
        Some(
            Node {
                data: "I'm root",
                key: 0,
                parent: None,
                left: Some(
                    1,
                ),
                right: None,
            },
        ),
        Some(
            Node {
                data: "Left child",
                key: 1,
                parent: Some(
                    0,
                ),
                left: Some(
                    2,
                ),
                right: None,
            },
        ),
        Some(
            Node {
                data: "Left child's left child",
                key: 2,
                parent: Some(
                    1,
                ),
                left: None,
                right: None,
            },
        ),
    ],
    empty_cells: [],
}
