lib/tests/snapshots/tree__add_right.snap
---
source: lib/tests/tree.rs
expression: tree
---
BTree {
    nodes: [
        Some(
            Node {
                data: "I'm root",
                key: 0,
                parent: None,
                left: None,
                right: Some(
                    1,
                ),
            },
        ),
        Some(
            Node {
                data: "Right child",
                key: 1,
                parent: Some(
                    0,
                ),
                left: None,
                right: Some(
                    2,
                ),
            },
        ),
        Some(
            Node {
                data: "Right child's right child",
                key: 2,
                parent: Some(
                    1,
                ),
                left: None,
                right: None,
            },
        ),
    ],
    empty_cells: [],
}
