lib/tests/snapshots/tree__get_root.snap
---
source: lib/tests/tree.rs
expression: tree
---
BTree {
    nodes: [
        Some(
            Node {
                data: "Yay",
                key: 0,
                parent: None,
                left: None,
                right: None,
            },
        ),
    ],
    empty_cells: [],
}
