lib/tests/snapshots/tree__remove_sub_tree.snap
---
source: lib/tests/tree.rs
expression: tree
---
BTree {
    nodes: [
        Some(
            Node {
                data: "I'm root",
                key: 0,
                parent: None,
                left: None,
                right: None,
            },
        ),
        None,
        None,
        None,
    ],
    empty_cells: [
        2,
        3,
        1,
    ],
}
